--- a/public/asset/styles/main_styles.css
+++ b/public/asset/styles/main_styles.css
@@ -890,11 +890,11 @@ section {
 }
 
 .product_name {
-    max-width: 175px;
+    max-width: 190px;
 }
 
 .product_name a {
-    font-size: 20px;
+    font-size: 14px;
     line-height: 1.2;
     color: #4a4a4a;
     font-weight: 500;
@@ -1005,7 +1005,7 @@ section {
 }
 
 .product_price {
-    font-size: 30px;
+    font-size: 20px;
     color: #4a4a4a;
     font-weight: 500;
     margin-top: 19px;
@@ -1699,7 +1699,7 @@ h3 {
 
 .image-cart {
     /* width: 27% !important; */
-    height: 50% !important
+    height: 25% !important
 }
 
 .cart-item {
@@ -1716,6 +1716,7 @@ h3 {
     display: table-cell;
     float: none;
     vertical-align: top;
+    padding-right: 17px;
 }
 
 .cart-item .item-title {
@@ -1794,4 +1795,16 @@ h3 {
     float: left;
     margin: 0;
     width: 60px;
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.promotion-points {
+    color: #333;
+    font-size: .9rem;
+    font-weight: 400;
+    line-height: 1.3rem;
+    padding-top: 6px;
 }
